--- a/notebooks/KPI Example.ipynb
+++ b/notebooks/KPI Example.ipynb
@@ -25,62 +25,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[OK] fmi2Instantiate: The Resource location of FMU with instance name %s is %s.\n",
+      "\n",
+      "[WARNING] fmi2Instantiate: Argument loggingOn is set to %d\n",
+      ". This is not supported. loggingOn will default to '0'.\n",
+      "\n",
       "[OK] The current working directory is %s\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to fmuUnzipLocation is not %s.\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation is not %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to fmuUnzipLocation is not %s.\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation is not %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to fmuUnzipLocation is not %s.\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation is not %s.\n",
+      "\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation %s\n",
+      "\n",
+      "[OK] fmi2Instantiate: Path to fmuResourceLocation %s\n",
       "\n",
       "[OK] Command executes to copy content of resources folder: %s\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to model description file is %s.\n",
+      "[OK] fmi2Instantiate: Path to model description file is %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: The FMU modelIdentifier is %s.\n",
+      "[OK] fmi2Instantiate: The FMU modelIdentifier is %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: The FMU modelGUID is %s.\n",
+      "[OK] fmi2Instantiate: The FMU modelGUID is %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Slave %s is instantiated.\n",
+      "[OK] fmi2Instantiate: Slave %s is instantiated.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Instantiation of %s succeded.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import energym\n",
-    "\n",
-    "env = energym.make(\"DatacenterThermostat-v0\", simulation_days=300)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "During the simulation, the important values for the KPIs are stored in a KPI object and can be retrieved with the `get_kpi()` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[OK] fmiInitializeSlave: The sockfd is %d.\n",
+      "[OK] fmi2Instantiate: Instantiation of %s succeded.\n",
       "\n",
-      "[OK] fmiInitializeSlave: The port number is %d.\n",
+      "[OK] fmi2EnterInitializationMode: The sockfd is %d.\n",
       "\n",
-      "[OK] fmiInitializeSlave: This hostname is %s.\n",
+      "[OK] fmi2EnterInitializationMode: The port number is %d.\n",
       "\n",
-      "[OK] fmiInitializeSlave: TCPServer Server waiting for clients on port: %d.\n",
+      "[OK] fmi2EnterInitializationMode: This hostname is %s.\n",
       "\n",
-      "[OK] fmiInitializeSlave: The number of input variables is %d.\n",
+      "[OK] fmi2EnterInitializationMode: TCPServer Server waiting for clients on port: %d.\n",
       "\n",
-      "[OK] fmiInitializeSlave: The number of output variables is %d.\n",
+      "[OK] fmi2EnterInitializationMode: The number of input variables is %d.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: The number of output variables is %d.\n",
       "\n",
       "[OK] Get input file from resource folder %s.\n",
       "\n",
@@ -137,11 +121,36 @@
       "[OK] done searching pattern %s\n",
       "\n",
       "[OK] This version uses the **energyplus** command line interface to  call the EnergyPlus executable. **RunEPlus.bat** and **runenergyplus** , which were used in earlier versions, were deprecated as of August 2015.\n",
-      "[OK] fmiInitializeSlave: The connection has been accepted.\n",
+      "[OK] fmi2EnterInitializationMode: The connection has been accepted.\n",
       "\n",
-      "[OK] fmiInitializeSlave: Slave %s is initialized.\n",
-      "\n",
-      "{'kpi1': {'name': 'Fa_Pw_All', 'type': 'avg', 'kpi': 77271.67873206396}, 'kpi2': {'name': 'Z01_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.08053484806975367}, 'kpi3': {'name': 'Z02_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.021179971411713086}, 'kpi4': {'name': 'Z01_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 62}, 'kpi5': {'name': 'Z02_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 26}}\n"
+      "[OK] fmi2EnterInitializationMode: Slave %s is initialized.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import energym\n",
+    "\n",
+    "env = energym.make(\"DatacenterThermostat-v0\", simulation_days=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "During the simulation, the important values for the KPIs are stored in a KPI object and can be retrieved with the `get_kpi()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'kpi1': {'name': 'Fa_Pw_All', 'type': 'avg', 'kpi': 49172.88799318855}, 'kpi2': {'name': 'Z01_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.04266704660766934}, 'kpi3': {'name': 'Z02_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.01742516403449155}, 'kpi4': {'name': 'Z01_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 43}, 'kpi5': {'name': 'Z02_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 19}}\n"
      ]
     }
    ],
@@ -174,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'kpi1': {'name': 'Fa_Pw_All', 'type': 'avg', 'kpi': 76609.32401534989}, 'kpi2': {'name': 'Z01_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.07871807946519971}, 'kpi3': {'name': 'Z02_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.02236341982219245}, 'kpi4': {'name': 'Z01_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 26}, 'kpi5': {'name': 'Z02_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 10}}\n"
+      "{'kpi1': {'name': 'Fa_Pw_All', 'type': 'avg', 'kpi': 49102.517010889744}, 'kpi2': {'name': 'Z01_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.0335637410618661}, 'kpi3': {'name': 'Z02_T', 'type': 'avg_dev', 'target': [17, 26], 'kpi': 0.016933419512737836}, 'kpi4': {'name': 'Z01_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 15}, 'kpi5': {'name': 'Z02_T', 'type': 'tot_viol', 'target': [17, 26], 'kpi': 7}}\n"
      ]
     }
    ],
@@ -199,15 +208,15 @@
      "output_type": "stream",
      "text": [
       "####################################################################\n",
-      "Variable name: Fa_Pw_All, kpi type: avg, kpi value: 77271.67873206396\n",
+      "Variable name: Fa_Pw_All, kpi type: avg, kpi value: 49172.88799318855\n",
       "####################################################################\n",
-      "Variable name: Z01_T, kpi type: avg_dev, kpi value: 0.08053484806975367\n",
+      "Variable name: Z01_T, kpi type: avg_dev, kpi value: 0.04266704660766934\n",
       "####################################################################\n",
-      "Variable name: Z02_T, kpi type: avg_dev, kpi value: 0.021179971411713086\n",
+      "Variable name: Z02_T, kpi type: avg_dev, kpi value: 0.01742516403449155\n",
       "####################################################################\n",
-      "Variable name: Z01_T, kpi type: tot_viol, kpi value: 62\n",
+      "Variable name: Z01_T, kpi type: tot_viol, kpi value: 43\n",
       "####################################################################\n",
-      "Variable name: Z02_T, kpi type: tot_viol, kpi value: 26\n"
+      "Variable name: Z02_T, kpi type: tot_viol, kpi value: 19\n"
      ]
     }
    ],
@@ -231,11 +240,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.05085740974073338\n",
-      "88\n",
-      "[OK] fmiTerminateSlave: fmiFreeInstanceSlave must be called to free the FMU instance.\n",
+      "0.030046105321080444\n",
+      "62\n",
+      "[OK] fmi2Terminate: fmiFreeInstanceSlave must be called to free the FMU instance.\n",
       "\n",
-      "[OK] fmiFreeSlaveInstance: The function fmiFreeSlaveInstance of instance %s is executed.\n",
+      "[OK] fmi2FreeInstance: The function fmi2FreeInstance of instance %s is executed.\n",
       "\n",
       "[OK] freeInstanceResources: %s will be freed.\n",
       "\n"
@@ -267,25 +276,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[OK] fmi2Instantiate: The Resource location of FMU with instance name %s is %s.\n",
+      "\n",
+      "[WARNING] fmi2Instantiate: Argument loggingOn is set to %d\n",
+      ". This is not supported. loggingOn will default to '0'.\n",
+      "\n",
       "[OK] The current working directory is %s\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to fmuUnzipLocation is not %s.\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation is not %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to fmuUnzipLocation is not %s.\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation is not %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to fmuUnzipLocation is not %s.\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation is not %s.\n",
+      "\n",
+      "[OK] fmi2Instantiate: Path to fmuUnzipLocation %s\n",
+      "\n",
+      "[OK] fmi2Instantiate: Path to fmuResourceLocation %s\n",
       "\n",
       "[OK] Command executes to copy content of resources folder: %s\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Path to model description file is %s.\n",
+      "[OK] fmi2Instantiate: Path to model description file is %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: The FMU modelIdentifier is %s.\n",
+      "[OK] fmi2Instantiate: The FMU modelIdentifier is %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: The FMU modelGUID is %s.\n",
+      "[OK] fmi2Instantiate: The FMU modelGUID is %s.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Slave %s is instantiated.\n",
+      "[OK] fmi2Instantiate: Slave %s is instantiated.\n",
       "\n",
-      "[OK] fmiInstantiateSlave: Instantiation of %s succeded.\n",
+      "[OK] fmi2Instantiate: Instantiation of %s succeded.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: The sockfd is %d.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: The port number is %d.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: This hostname is %s.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: TCPServer Server waiting for clients on port: %d.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: The number of input variables is %d.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: The number of output variables is %d.\n",
+      "\n",
+      "[OK] Get input file from resource folder %s.\n",
+      "\n",
+      "[OK] Searching for following pattern %s\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Found matching file %s.\n",
+      "\n",
+      "[OK] done searching pattern %s\n",
+      "\n",
+      "[OK] Get input file from resource folder %s.\n",
+      "\n",
+      "[OK] Searching for following pattern %s\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Found matching file %s.\n",
+      "\n",
+      "[OK] done searching pattern %s\n",
+      "\n",
+      "[OK] Get input file from resource folder %s.\n",
+      "\n",
+      "[OK] Searching for following pattern %s\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Read directory and search for *.idf, *.epw, or *.idd file.\n",
+      "\n",
+      "[OK] Found matching file %s.\n",
+      "\n",
+      "[OK] done searching pattern %s\n",
+      "\n",
+      "[OK] This version uses the **energyplus** command line interface to  call the EnergyPlus executable. **RunEPlus.bat** and **runenergyplus** , which were used in earlier versions, were deprecated as of August 2015.\n",
+      "[OK] fmi2EnterInitializationMode: The connection has been accepted.\n",
+      "\n",
+      "[OK] fmi2EnterInitializationMode: Slave %s is initialized.\n",
       "\n"
      ]
     }
@@ -311,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,20 +408,20 @@
      "output_type": "stream",
      "text": [
       "####################################################################\n",
-      "Variable name: Fa_Pw_All, kpi type: avg, kpi value: 80488.52614499704\n",
+      "Variable name: Fa_Pw_All, kpi type: avg, kpi value: 54845.91862589517\n",
       "####################################################################\n",
-      "Variable name: Bd_Pw_All, kpi type: avg, kpi value: 72127.17908818509\n",
+      "Variable name: Bd_Pw_All, kpi type: avg, kpi value: 48007.33116024124\n",
       "####################################################################\n",
-      "Variable name: Fa_Pw_HVAC, kpi type: avg, kpi value: 8361.347056811981\n",
+      "Variable name: Fa_Pw_HVAC, kpi type: avg, kpi value: 6838.587465653989\n",
       "####################################################################\n",
-      "Variable name: Fa_Pw_All, kpi type: sum, kpi value: 80488526.14499705\n",
+      "Variable name: Fa_Pw_All, kpi type: sum, kpi value: 27477805.231573477\n",
       "####################################################################\n",
-      "Variable name: Z01_T, kpi type: avg_dev, kpi value: 3.267533214577538\n",
+      "Variable name: Z01_T, kpi type: avg_dev, kpi value: 3.0986354227126003\n",
       "####################################################################\n",
-      "Variable name: Z02_T, kpi type: avg_dev, kpi value: 2.976782357648463\n",
-      "[OK] fmiTerminateSlave: fmiFreeInstanceSlave must be called to free the FMU instance.\n",
+      "Variable name: Z02_T, kpi type: avg_dev, kpi value: 2.823129979930436\n",
+      "[OK] fmi2Terminate: fmiFreeInstanceSlave must be called to free the FMU instance.\n",
       "\n",
-      "[OK] fmiFreeSlaveInstance: The function fmiFreeSlaveInstance of instance %s is executed.\n",
+      "[OK] fmi2FreeInstance: The function fmi2FreeInstance of instance %s is executed.\n",
       "\n",
       "[OK] freeInstanceResources: %s will be freed.\n",
       "\n"
@@ -348,6 +437,13 @@
     "\n",
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
