Adapt Modelica forecast units and fix typo

--- a/notebooks/SmartlabThermal_wrapper.ipynb
+++ b/notebooks/SmartlabThermal_wrapper.ipynb
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "#Import the wrappers\n",
-    "from energym.wrappers.downsample_outputs import DonwsampleOutputs\n",
+    "from energym.wrappers.downsample_outputs import DownsampleOutputs\n",
     "from energym.wrappers.rescale_outputs import RescaleOutputs\n",
     "from energym.wrappers.rescale_inputs import RescaleInputs\n",
     "from energym.wrappers.rl_wrapper import RLWrapper\n"
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "#We create a two layer wrapper. We both downsample and add rewards computation\n",
-    "env_down = DonwsampleOutputs(env, steps, downsampling_dic)\n",
+    "env_down = DownsampleOutputs(env, steps, downsampling_dic)\n",
     "env_down_res = RescaleOutputs(env_down,lower_bound, upper_bound) #By default, the variables are rescaled between 0 and 1\n",
     "env_down_res = RescaleInputs(env_down_res) #By defaults, the variables are rescaled between 0 and 1\n",
     "#env_down_RL = RLWrapper(env_down_res, reward)  #Always put RLwrapper at the end"
