Rename Apartments2 model

--- a/notebooks/Apartments2Thermal_wrapper.ipynb
+++ b/notebooks/Apartments2Thermal_wrapper.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SmartlabThermal Wrapper notebook example"
+    "# Apartments2Thermal Wrapper notebook example"
    ]
   },
   {
@@ -156,7 +156,7 @@
     "import energym\n",
     "\n",
     "weather = \"ESP_CT_Barcelona\"\n",
-    "env = energym.make(\"SmartlabThermal-v0\", weather=weather, simulation_days=300)"
+    "env = energym.make(\"Apartments2Thermal-v0\", weather=weather, simulation_days=300)"
    ]
   },
   {
